--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "Time"
   ],
   "dependencies": {
-    "prop-types": "15.7.2"
+    "prop-types": "15.7.2",
+    "react-native-gesture-handler": "^1.3.0"
   },
   "peerDependencies": {
     "react": "16.9.0",
