--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "Time"
   ],
   "dependencies": {
-    "prop-types": "15.7.2",
-    "react-native-gesture-handler": "^1.3.0"
+    "prop-types": "15.7.2"
   },
   "peerDependencies": {
     "react": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
